--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,19 +1,25 @@
 <div id="background">
 	<header class="cf">
 		<div class="wrapper_wide">
-			<a href="#" id="logo">Podcast.fm</a>
+			<a href="#" id="logo">Podcastube</a>
 			<nav>
 				<ul>
+				<% unless podcast_signed_in? %>
 					<li><%= link_to "Explore"  %></li>
-					<li><%= link_to "Sign In" %></li>
-					<li><%= link_to "Create a Podcast"%></li>
+					<li><%= link_to "Sign In", new_podcast_session_path %></li>
+					<li><%= link_to "Create", new_podcast_registration_path %></li>  
+					<% else %>
+					<li><%= link_to "Explore"  %></li>
+					<li><%= link_to "Profile"  %></li>
+					<li> <%= link_to "Sign Out", destroy_podcast_session_path , method: :delete %></li>
+					<% end %>
 				</ul>
 			</nav>
 		</div>
 	</header>
 	<div class="wrapper_skinny">
-		<h1>Discover your new favorite<br> podcast, or create your own.</h1>
-		<a href="#" class="button button_highlight">Create</a>
+		<h1>Rediscover the Podcast in You</h1>
+		<%= link_to "Create", new_podcast_registration_path, class:"button button_highlight" %>  
 	    <a href="#" class="button button_white">Explore</a>
 	</div>
 </div>
