Edit and sign in pages styles added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,11 @@
 	</div>
 <% end %>
 
+<% unless current_page?(root_path) %>
+	<%= render 'layouts/header'; %>
+<% end %>
+
+
 <%= yield %>
 
 </body>
