explore link fixed and added podcast controller and views

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,11 +5,11 @@
 			<nav>
 				<ul>
 				<% unless podcast_signed_in? %>
-					<li><%= link_to "Explore"  %></li>
+					<li><%= link_to "Explore" , podcasts_path %></li>
 					<li><%= link_to "Sign In", new_podcast_session_path %></li>
 					<li><%= link_to "Create", new_podcast_registration_path %></li>  
 					<% else %>
-					<li><%= link_to "Explore"  %></li>
+					<li><%= link_to "Explore" , podcasts_path %></li>
 					<li><%= link_to "Profile"  %></li>
 					<li> <%= link_to "Sign Out", destroy_podcast_session_path , method: :delete %></li>
 					<% end %>
@@ -20,6 +20,6 @@
 	<div class="wrapper_skinny">
 		<h1>Rediscover the Podcast in You</h1>
 		<%= link_to "Create", new_podcast_registration_path, class:"button button_highlight" %>  
-	    <a href="#" class="button button_white">Explore</a>
+	    <%= link_to "Explore" , podcasts_path, class:"button button_white" %>
 	</div>
 </div>
